# local-spark-mcp

./: .gitignore  CLAUDE.md  README.md  local-spark.example.toml  pyproject.toml
scripts/: build_jar.sh  smoke_engine.py  smoke_onelake.py
src/local_spark_mcp/: __init__.py  config.py  discovery.py  engine.py  fabric.py  java.py  protocol.py  server.py  spark_session.py  token_server.py  worker.py  worker_client.py
tests/: test_config.py  test_discovery.py  test_engine_automount.py  test_fabric.py  test_fabric_session_integration.py  test_format.py  test_progress.py  test_server_e2e.py  test_server_startup.py  test_token_provider_jvm.py  test_token_server.py  test_worker_integration.py
token-provider/: build.sbt
token-provider/src/main/scala/: HttpTokenProvider.scala  TokenProbe.scala
