[project]
name = "local-spark-mcp"
version = "0.1.0"
description = "MCP server giving an agent a stateful local Spark session for prototyping PySpark notebooks targeting Microsoft Fabric"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Bryon" }]
dependencies = [
    "mcp>=1.2.0",
    "pyspark==3.5.0",
    "delta-spark==3.2.0",
    "ipython>=8.18",
    "azure-identity>=1.25.1",
    "httpx>=0.28.1",
]

[project.scripts]
local-spark-mcp = "local_spark_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/local_spark_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
